# deep-learning-project-config

./: .gitignore  README.md  pyproject.toml
conf/: complete-example.yaml  conf.yaml  incomplete-example.yaml
simple_package/: _utils.py  cli.py  datasets.py  models.py  trainer.py  training.py
src/simple_package/: _utils.py  cli.py  datasets.py  models.py  trainer.py  training.py
