[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_package"
version = "0.0.1"
dependencies = ["click", "omegaconf", "rich"]

[project.optional-dependencies]
dev = ["black", "isort", "mypy", "ipython"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88

[tool.mypy]
strict = true
